// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`CLI Output Snapshots snapshots output for generate command with interactive prompts 1`] = `
"[intro] Gathering metadata for the new "posts" module...
[text] Module Description
[text] Primary Route Summary
[text] Main Schema Description
[confirm] Should this module be multi-tenant?
[outro] Metadata gathered.
[outro] Generated module at /tmp/kiln-generate-<ID>/packages/api/modules/posts
"
`;

exports[`CLI Output Snapshots snapshots output for remove command 1`] = `
"[outro] Removed module posts
"
`;

exports[`CLI Output Snapshots snapshots output for audit command 1`] = `
"[spawn] bun run <APP_ROOT>/packages/api/scripts/sync-schema.ts <REPO_ROOT>/packages/api
[spawn] bun run audit
[spawn] bun run typecheck
[spawn] bun run audit
[spawn] bun run typecheck
[spawn] bun run audit
[spawn] bun run typecheck
[spawn] bun run audit
[spawn] bun run typecheck
[spawn] bun run docs
[outro] Audit passed successfully.
"
`;

exports[`CLI Output Snapshots fails validation when input matches generic placeholder and produces auditory bell 1`] = `
"[intro] Gathering metadata for the new "posts" module...
[text] Module Description
[error] \x07Input cannot be identical to the generic placeholder ("The posts module"). Please provide a meaningful description.
[text] Primary Route Summary
[text] Main Schema Description
[confirm] Should this module be multi-tenant?
[outro] Metadata gathered.
[outro] Generated module at /tmp/kiln-generate-<ID>/packages/api/modules/posts
"
`;

exports[`CLI Output Snapshots bypasses interactive prompts in CI environment 1`] = `
"[outro] Generated module at /tmp/kiln-generate-<ID>/packages/api/modules/posts
"
`;
